<resources>
    <string name="app_name">FoodDelivery</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="registerBold">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="banner">banner</string>
    <string name="create_account">Create Account</string>
</resources>