<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/register_gradient">

    <data>
        <variable
            name="registerVM"
            type="UILayer.ViewModels.RegisterVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/create_account"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:text="@={registerVM.username}"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:text="@={registerVM.password}"
            android:inputType="textPassword"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:text="@={registerVM.confirmPassword}"
            android:inputType="textPassword"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:text="@={registerVM.email}"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/register_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:text="@={registerVM.phoneNumber}"
            android:inputType="phone"
            android:digits="1234567890-+()"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:text="@={registerVM.address}"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/text_selector"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:onClick="@{() -> registerVM.registerUser()}"/>

    </LinearLayout>



</layout>