<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="UILayer.Views.MainActivity"
    android:background="@drawable/register_gradient">

    <data>
        <variable
            name="loginVM"
            type="UILayer.ViewModels.LoginVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true">
        <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:layout_marginHorizontal="70dp"
            android:text="@={loginVM.username}"
            android:hint="@string/username"
           />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="70dp"
            android:inputType="textPassword"
            android:text="@={loginVM.password}"
            android:hint="@string/password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_height="wrap_content"
            android:layout_width="150sp"
            android:text="@string/login"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/text_selector"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:onClick="@{() -> loginVM.loginUser()}"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_height="wrap_content"
            android:layout_width="150sp"
            android:text="@string/registerBold"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/text_selector"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:onClick="@{() -> loginVM.goToRegister()}"
            />
    </LinearLayout>

</layout>